--- a/css/styles.css
+++ b/css/styles.css
@@ -106,7 +106,7 @@ nav .logo a img {
     width: 80px;
 }
 
-main {
+.home-main {
     background-image: url("../assets/img/fondo_home.jpg");
     height: 100%;
     background-repeat: no-repeat;
@@ -114,7 +114,8 @@ main {
     background-position-y: bottom;
     color: white;
     display: grid;
-    grid-template-rows: 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 5fr 1fr;
 }
 
 .home-title-container,
@@ -122,11 +123,15 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
 }
 
 .home-button-container {
     height: initial;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    align-items: flex-start;
 }
 
 .home-button-container a {
@@ -146,14 +151,171 @@ main {
 .home-title-container p {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 800;
-    font-size: 30px;
+    font-size: 20px;
     text-transform: uppercase;
     letter-spacing: 10px;
+    cursor: pointer;
 }
 
 .home-title-container p:hover {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 
 /*-------------------------Blogs page------------------*/
+
+.hero {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: black;
+    grid-gap: 20px;
+}
+
+.hero-image {
+    display: grid;
+    grid-template-rows: 50px 1fr;
+    align-items: center;
+    padding: 0 30px;
+    padding-bottom: 20px;
+}
+
+.hero-image h3 {
+    text-transform: uppercase;
+}
+
+.hero-image figure img {
+    width: 100%;
+}
+
+.hero-text {
+    display: grid;
+    grid-template-rows: 1fr 2fr 1fr;
+    height: 200px;
+    align-self: center;
+    align-items: center;
+    grid-gap: 10px;
+    margin-right: 0 20px;
+    width: 80%;
+    color: white;
+}
+
+.hero-text h2 {
+    font-size: 30px;
+    letter-spacing: 10px;
+}
+
+.hero-text a {
+    text-align: center;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: black;
+    width: 100px;
+}
+
+.hero-text a:hover {
+    box-shadow: 2px 2px 1px 1px rgba(255, 255, 255, .3);
+}
+
+.proyects {
+    display: grid;
+    grid-template-rows: 50px 1fr;
+    height: auto;
+    width: 100%;
+    grid-gap: 20px;
+    margin-bottom: 20px;
+}
+
+.titile-container {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    border-bottom: 1px solid rgba(0, 0, 0, .4);
+}
+
+.proyects h3 {
+    justify-self: center;
+    padding: 20px 0;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    font-size: 20px;
+    width: auto;
+}
+
+.proyects-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    grid-gap: 20px;
+    width: 90%;
+    justify-self: center;
+}
+
+.proyect {
+    background-color: black;
+    display: grid;
+    grid-template-rows: 2fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+    border-radius: 10px;
+    overflow: hidden;
+    align-items: center;
+    justify-items: start;
+    color: white;
+    height: 500px;
+}
+
+.proyect p,
+a {
+    margin: 0 20px;
+}
+
+.proyect a {
+    text-align: center;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px 20px;
+    color: black;
+    width: 100px;
+}
+
+.proyect a:hover {
+    box-shadow: 2px 2px 1px 1px rgba(255, 255, 255, .3);
+}
+
+.proyect figure img {
+    width: 100%;
+}
+
+
+/* -------------------footer------------------ */
+
+footer {
+    display: grid;
+    grid-template-rows: 30px 1fr;
+    color: white;
+}
+
+footer span {
+    background-color: rebeccapurple;
+}
+
+footer .fotter {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    height: auto;
+}
+
+footer .fotter p {
+    padding: 20px;
+}
+
+@media screen and (max-width: 780px) {
+    .hero {
+        grid-template-columns: 1fr;
+    }
+    .hero-text {
+        justify-self: center;
+        height: initial;
+        margin-bottom: 20px;
+    }
+}
