--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,9 @@ a {
     color: black;
 }
 
+
+/* --------------------Header---------------------- */
+
 header {
     width: 100%;
     height: 140px;
@@ -104,6 +107,31 @@ nav .about a:hover {
 
 nav .logo a img {
     width: 80px;
+}
+
+
+/* -------------------footer------------------ */
+
+footer {
+    display: grid;
+    grid-template-rows: 30px 1fr;
+    color: white;
+}
+
+footer span {
+    background-color: rebeccapurple;
+}
+
+footer .fotter {
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    height: auto;
+}
+
+footer .fotter p {
+    width: auto;
+    padding: 20px;
 }
 
 .home-main {
@@ -286,28 +314,91 @@ a {
 }
 
 
-/* -------------------footer------------------ */
+/* ----------------------Blog---------------- */
 
-footer {
+.blog_main {
     display: grid;
-    grid-template-rows: 30px 1fr;
-    color: white;
+    grid-template-rows: 500px 2fr 1fr;
+    grid-template-areas: 'image' 'proyect_text' 'contact';
+    grid-gap: 20px;
+    margin-bottom: 20px;
 }
 
-footer span {
-    background-color: rebeccapurple;
+.image {
+    grid-area: image;
 }
 
-footer .fotter {
-    background-color: black;
-    display: flex;
-    justify-content: center;
-    height: auto;
+.image .blog-image-container {
+    background-image: url('../assets/img/fondo_home.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 90%;
+    height: 500px;
+    margin: 0 auto;
 }
 
-footer .fotter p {
-    width: auto;
-    padding: 20px;
+.text {
+    grid-area: proyect_text;
+    display: grid;
+    grid-template-rows: 50px 1fr;
+}
+
+.text div {
+    justify-self: center;
+    width: 80%;
+}
+
+.text div h4 {
+    letter-spacing: 5px;
+    border-bottom: 2px solid rgba(0, 0, 0, .4);
+}
+
+.text div h3 {
+    letter-spacing: 5px;
+    margin-bottom: 10px;
+}
+
+.text div p {
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+}
+
+.text div .contact {
+    grid-area: contact;
+}
+
+.contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-items: center;
+    align-items: center;
+}
+
+.contact-container {
+    display: grid;
+    grid-template-columns: 60px 1fr;
+    grid-gap: 10px;
+    justify-items: center;
+    align-items: center;
+    border: solid rgba(0, 0, 0, .6) 1px;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.contact-container:hover {
+    cursor: pointer;
+    box-shadow: 2px 2px 1px 1px rgba(0, 0, 0, .6);
+}
+
+.contact-container i {
+    font-size: 60px;
+}
+
+.contact-container h4 {
+    letter-spacing: 5px;
+    font-weight: 200px;
+    border-bottom: rgba(0, 0, 0, .4) solid 2px;
 }
 
 @media screen and (max-width: 780px) {
@@ -318,5 +409,18 @@ footer .fotter p {
         justify-self: center;
         height: initial;
         margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .contact-container {
+        grid-template-columns: 1fr;
+    }
+}
+
+@media screen and (max-width: 350px) {
+    .contact {
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
     }
 }
